2007-08-28  Alexey Shchepin  <alexey@process-one.net>

	* doc/guide.tex: Described @HOST@ feature (thanks to Badlop)

2007-08-26  Alexey Shchepin  <alexey@process-one.net>

	* doc/guide.tex: Removed mentions of unexistent 'hosts' modules
	option (thanks to Badlop)

2007-08-25  Alexey Shchepin  <alexey@process-one.net>

	* src/gen_mod.erl: Substitute @HOST@ with hostname in the 'host'
	option (thanks to Badlop)
	* src/mod_vcard.erl: Likewise
	* src/mod_vcard_ldap.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewise
	* src/mod_muc/mod_muc.erl: Likewise
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_echo.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise

2007-08-24  Alexey Shchepin  <alexey@process-one.net>

	* src/web/ejabberd_web_admin.erl: Moved roster stuff to mod_roster*
	* src/mod_roster.erl: Likewise
	* src/mod_roster_odbc.erl: Likewise

2007-08-23  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_sm.erl: Removed check which denies resource to
	receive its own presence

	* src/web/ejabberd_web_admin.erl: Added hooks to allow plugins to
	add their pages without modifying ejabberd_web_admin.erl (thanks
	to Badlop)
	* src/web/ejabberd_web_admin.hrl: Macro definitions moved here
	* src/mod_shared_roster.erl: Updated
	* src/mod_offline.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise

2007-08-22  Alexey Shchepin  <alexey@process-one.net>

	* src/jlib.erl: Use http_base_64:decode if available

2007-08-20  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_roster.erl: Don't send roster push when unsubscribing in
	"None + Pending In" state
	* src/mod_roster_odbc.erl: Likewise

	* src/mod_offline.erl: Renamed MAX_OFFLINE_MSGS to MaxOfflineMsgs

2007-08-16  Jerome Sautret  <jsautret@process-one.net>

	* src/odbc/ejabberd_odbc_sup.erl: Add an odbc_pool_size config
	file option to choose the number of SQL connection in each
	pool (EJAB-58).